@@ -4,6 +4,8 @@ Change Log
 
 Version 3.0.4 -
 ---------------
+- Fixed bug in which Dict classes did not correctly return tokens as nested
+  ParseResults, reported by and fix identified by Bu Sun Kim, many thanks!!!
 
 
 Version 3.0.3 -
